code25_all/scala/10041546.txt
val A = 3
val (A) = (3)

val (A,B) = (2,3)

scala> val (A,B) = (2,3)
<console>:7: error: not found: value A
       val (A,B) = (2,3)
            ^
<console>:7: error: not found: value B
       val (A,B) = (2,3)
              ^

